Completed confusion matrix

--- a/assignment-1/kim_changsu_reyes-cortes_jesse_assignment1.ipynb
+++ b/assignment-1/kim_changsu_reyes-cortes_jesse_assignment1.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "code",
    "execution_count": 85,
    "metadata": {},
-   "outputs": [
-  
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -56,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +76,7 @@
     "    for i in range(0, len(x)):\n",
     "        if(x[i] == y[i]):\n",
     "            count = count + 1\n",
+    "    \n",
     "    return count/len(x), 1-(count/len(x))\n",
     "\n",
     "print(\"Accuracy and error: \",accuracy_generalization_error(Acc1, Acc2))"
@@ -156,6 +155,83 @@
     "#F1 score(F-Measure = (2 * Precision * Recall) / (Precision + Recall))\n",
     "print(\"F1 Score is \", (2*precision(Acc1,Acc2)*recall(Acc1,Acc2))/(precision(Acc1,Acc2)+recall(Acc1,Acc2)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n=27\t Predicted: NO \t Predicted YES:\n",
+      "\n",
+      "Actual:  \n",
+      " NO \t    11 \t\t   5\n",
+      "\n",
+      "Actual:\n",
+      " YES \t    2 \t\t   9\n"
+     ]
+    }
+   ],
+   "source": [
+    "def confusion_matrix(x,y):\n",
+    "    TN = 0\n",
+    "    FP = 0\n",
+    "    FN = 0\n",
+    "    TP = 0\n",
+    "    for i in range(0, len(x)):\n",
+    "        if(x[i]==0 and y[i]==0):\n",
+    "            TN = TN + 1\n",
+    "        elif(x[i]==0 and y[i]==1):\n",
+    "            FP = FP + 1\n",
+    "        elif(x[i]==1 and y[i]==0):\n",
+    "            FN = FN + 1\n",
+    "        elif(x[i]==1 and y[i]==1):\n",
+    "            TP = TP + 1\n",
+    "    print(\"n=%d\\t Predicted: NO \\t Predicted YES:\" % len(x))\n",
+    "    print(\"\\nActual:  \")\n",
+    "    print(\" NO \\t    %d \\t\\t   %d\" % (TN, FP))\n",
+    "    print(\"\\nActual:\")\n",
+    "    print(\" YES \\t    %d \\t\\t   %d\" % (FN, TP))\n",
+    "    \n",
+    "confusion_matrix(Acc1, Acc2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ROC_curve(x,y):\n",
+    "    TN = 0\n",
+    "    FP = 0\n",
+    "    FN = 0\n",
+    "    TP = 0\n",
+    "    for i in range(0, len(x)):\n",
+    "        if(x[i]==0 and y[i]==0):\n",
+    "            TN = TN + 1\n",
+    "        elif(x[i]==0 and y[i]==1):\n",
+    "            FP = FP + 1\n",
+    "        elif(x[i]==1 and y[i]==0):\n",
+    "            FN = FN + 1\n",
+    "        elif(x[i]==1 and y[i]==1):\n",
+    "            TP = TP + 1\n",
+    "        \n",
+    "    TPR = TP/(TP + FN)\n",
+    "    FPT = TN/(FP + TN)\n",
+    "\n",
+    "ROC_curve(Acc1,Acc2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
