--- a/assignment-1/kim_changsu_reyes-cortes_jesse_assignment1.ipynb
+++ b/assignment-1/kim_changsu_reyes-cortes_jesse_assignment1.ipynb
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy and error:  (0.41935483870967744, 0.5806451612903225)\n"
+      "Accuracy and error:  (0.058823529411764705, 0.9411764705882353)\n"
      ]
     }
    ],
@@ -303,6 +303,52 @@
     "print(\"AUC: \",AUC(A1,A2))\n",
     "        \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4898 entries, 0 to 4897\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   fixed acidity         4898 non-null   float64\n",
+      " 1   volatile acidity      4898 non-null   float64\n",
+      " 2   citric acid           4898 non-null   float64\n",
+      " 3   residual sugar        4898 non-null   float64\n",
+      " 4   chlorides             4898 non-null   float64\n",
+      " 5   free sulfur dioxide   4898 non-null   float64\n",
+      " 6   total sulfur dioxide  4898 non-null   float64\n",
+      " 7   density               4898 non-null   float64\n",
+      " 8   pH                    4898 non-null   float64\n",
+      " 9   sulphates             4898 non-null   float64\n",
+      " 10  alcohol               4898 non-null   float64\n",
+      " 11  quality               4898 non-null   int64  \n",
+      "dtypes: float64(11), int64(1)\n",
+      "memory usage: 459.3 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('winequality-white.csv',sep=\";\")\n",
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.loc[data['quality'] > 5, 'quality'] = 1  #Good\n",
+    "data.loc[data['quality'] <= 5, 'quality'] = 0 #bad"
    ]
   },
   {
