--- a/assignment-1/kim_changsu_reyes-cortes_jesse_assignment1.ipynb
+++ b/assignment-1/kim_changsu_reyes-cortes_jesse_assignment1.ipynb
@@ -307,6 +307,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-fb7e28f4ccfa>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-fb7e28f4ccfa>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    def fit(self, X, Y, n_neighbors, weights, kwargs):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights_bank = { 'uniform' : 'hello', 'euclidian' : 'bye', 'manhattan' : 'good morning'}\n",
+    "\n",
+    "def fit(self, X, Y, n_neighbors, weights, kwargs):\n",
+    "    x = np.array(X)\n",
+    "    y = np.array(Y)\n",
+    "    n_neighbors = n_neighbors\n",
+    "    weights = \n",
+    "    \n",
+    "    \n",
+    "def predict(self, X):\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "def __init__(self):\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "def KNN_Classifier():\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
