removed untitled file

--- a/assignment-1/kim_changsu_reyes-cortes_jesse_assignment1.ipynb
+++ b/assignment-1/kim_changsu_reyes-cortes_jesse_assignment1.ipynb
@@ -347,6 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#PartB 11)\n",
     "data.loc[data['quality'] > 5, 'quality'] = 1  #Good\n",
     "data.loc[data['quality'] <= 5, 'quality'] = 0 #bad"
    ]
@@ -356,7 +357,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#12) mean, standard deviation, quartiles.\n"
+   ]
   }
  ],
  "metadata": {
