--- a/assignment-1/kim_changsu_reyes-cortes_jesse_assignment1.ipynb
+++ b/assignment-1/kim_changsu_reyes-cortes_jesse_assignment1.ipynb
@@ -339,7 +339,12 @@
     "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    "name": "stdout",
+     "output_type": "stream",
+    "<class 'pandas.core.frame.DataFrame'>\n",
+    "RangeIndex: 4898 entries, 0 to 4897\n"
+   ],
    "source": [
     "weights_bank = { 'uniform' : 'hello', 'euclidian' : 'bye', 'manhattan' : 'good morning'}\n",
     "\n",
