--- a/assignment-1/kim_changsu_reyes-cortes_jesse_assignment1.ipynb
+++ b/assignment-1/kim_changsu_reyes-cortes_jesse_assignment1.ipynb
@@ -336,14 +336,19 @@
      ]
     },
     {
-    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    "name": "stdout",
-     "output_type": "stream",
-    "<class 'pandas.core.frame.DataFrame'>\n",
-    "RangeIndex: 4898 entries, 0 to 4897\n"
+     "cells": [
+      {
+       "cell_type": "code",
+       "execution_count": null,
+       "metadata": {},
+       "outputs": [
+        {
+         "name": "stdout",
+        "output_type": "stream",
+        "<class 'pandas.core.frame.DataFrame'>\n",
+        "RangeIndex: 4898 entries, 0 to 4897\n",
+        "text": []
+       }
    ],
    "source": [
     "weights_bank = { 'uniform' : 'hello', 'euclidian' : 'bye', 'manhattan' : 'good morning'}\n",
