--- a/assignment-1/kim_changsu_reyes-cortes_jesse_assignment1.ipynb
+++ b/assignment-1/kim_changsu_reyes-cortes_jesse_assignment1.ipynb
@@ -334,7 +334,13 @@
       "dtypes: float64(11), int64(1)\n",
       "memory usage: 459.3 KB\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('winequality-white.csv',sep=\";\")\n",
+    "data.info()"
+   ]
+  },
     {
        "cell_type": "code",
        "execution_count": null,
