--- a/assignment-1/kim_changsu_reyes-cortes_jesse_steiner_devan_assignment1.ipynb
+++ b/assignment-1/kim_changsu_reyes-cortes_jesse_steiner_devan_assignment1.ipynb
@@ -27,15 +27,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Euclidean Distance:  1.0111874208078342\n"
-     ]
+     "name": "stdout",
+     "text": "Euclidean Distance:  1.0111874208078342\n"
     }
    ],
    "source": [
@@ -103,7 +103,7 @@
     "    return count/len(x)\n",
     "\n",
     "def generalization_error(x,y):\n",
-    "    accu = accuracy(x,y);\n",
+    "    accu = accuracy(x,y)\n",
     "    return 1-accu\n",
     "\n",
     "print(\"Accuracy: %f\" % accuracy(pdata_labels.to_numpy(),pdata['prob of health'].to_numpy()))\n",
@@ -1149,7 +1149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.0-final"
   }
  },
  "nbformat": 4,
