--- a/assignment-2/kim_changsu_reyes-cortes_jesse_steiner_devan_assignment2.ipynb
+++ b/assignment-2/kim_changsu_reyes-cortes_jesse_steiner_devan_assignment2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
       "text/plain": "[1, 3, 4, 1, 3, 4, 3, 9, 12, 4, 12, 16]"
      },
      "metadata": {},
-     "execution_count": 57
+     "execution_count": 3
     }
    ],
    "source": [
@@ -36,19 +36,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "22.8"
-     },
-     "metadata": {},
-     "execution_count": 58
-    }
-   ],
    "source": [
     "# Part A 2 Mean Squared Error\n",
     "def mse(Y_true, Y_pred):\n",
@@ -62,11 +49,24 @@
     "Y_pred = [23, 28, 41, 59, 39]\n",
     "\n",
     "mse(Y_true, Y_pred)"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 51,
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "22.8"
+     },
+     "metadata": {},
+     "execution_count": 51
+    }
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 58,
    "metadata": {
     "tags": []
    },
@@ -74,7 +74,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[2 3 4 2 4]\n\n[2 4 5 2 5]\n\n[3 2 3 5 8]\n\n[3 2 4 5 2]\n\n[2 5 5 1 8]\n\n[2 3 4 2 4]\n\n[3 2 3 5 8]\n\n[2 5 5 1 8]\n\n[3 4 2 5 6]\n\n[2 3 4 4 5]\n\n[2 3 4 2 4]\n\n[3 2 4 5 2]\n\n[3 4 2 5 6]\n\n[3 5 4 8 9]\n\n[3 9 5 4 5]\n\n[2 3 4 2 4]\n\n[2 5 5 1 8]\n\n[2 3 4 4 5]\n\n[3 9 5 4 5]\n\n[9 3 2 3 4]\n\n[2 3 4 2 4]\n\n[2 3 2 3 5]\n\n[9 9 8 4 5]\n\n[9 3 4 3 4]\n\n[2 3 4 2 5]\n\n"
+     "text": "[array([[2, 3, 4, 2, 4, 3]]), array([[2, 4, 5, 2, 5, 6]]), array([[3, 2, 3, 5, 8, 3]]), array([[3, 2, 4, 5, 2, 5]]), array([[2, 5, 5, 1, 8, 7]])]\n[array([[2, 3, 4, 2, 4, 3],\n       [2, 4, 5, 2, 5, 6]]), array([[3, 2, 3, 5, 8, 3],\n       [3, 2, 4, 5, 2, 5]]), array([[2, 5, 5, 1, 8, 7],\n       [2, 3, 2, 3, 5, 4]]), array([[3, 4, 2, 5, 6, 5],\n       [2, 3, 4, 5, 6, 3]]), array([[2, 3, 4, 4, 5, 4],\n       [3, 5, 4, 8, 9, 5]])]\n[array([[2, 3, 4, 2, 4, 3],\n       [2, 4, 5, 2, 5, 6],\n       [3, 2, 3, 5, 8, 3]]), array([[3, 2, 4, 5, 2, 5],\n       [2, 5, 5, 1, 8, 7],\n       [2, 3, 2, 3, 5, 4]]), array([[3, 4, 2, 5, 6, 5],\n       [2, 3, 4, 5, 6, 3],\n       [2, 3, 4, 4, 5, 4]]), array([[3, 5, 4, 8, 9, 5],\n       [9, 9, 8, 4, 5, 2],\n       [8, 4, 2, 8, 7, 3]]), array([[3, 9, 5, 4, 5, 8],\n       [3, 2, 4, 6, 5, 4],\n       [2, 3, 4, 2, 5, 5]])]\n[array([[2, 3, 4, 2, 4, 3],\n       [2, 4, 5, 2, 5, 6],\n       [3, 2, 3, 5, 8, 3],\n       [3, 2, 4, 5, 2, 5]]), array([[2, 5, 5, 1, 8, 7],\n       [2, 3, 2, 3, 5, 4],\n       [3, 4, 2, 5, 6, 5],\n       [2, 3, 4, 5, 6, 3]]), array([[2, 3, 4, 4, 5, 4],\n       [3, 5, 4, 8, 9, 5],\n       [9, 9, 8, 4, 5, 2],\n       [8, 4, 2, 8, 7, 3]]), array([[3, 9, 5, 4, 5, 8],\n       [3, 2, 4, 6, 5, 4],\n       [2, 3, 4, 2, 5, 5],\n       [9, 3, 4, 3, 4, 3]]), array([[9, 3, 2, 3, 4, 4],\n       [2, 3, 4, 2, 4, 5],\n       [2, 3, 5, 2, 5, 3],\n       [2, 4, 5, 3, 9, 4]])]\n[array([[2, 3, 4, 2, 4, 3],\n       [2, 4, 5, 2, 5, 6],\n       [3, 2, 3, 5, 8, 3],\n       [3, 2, 4, 5, 2, 5],\n       [2, 5, 5, 1, 8, 7]]), array([[2, 3, 2, 3, 5, 4],\n       [3, 4, 2, 5, 6, 5],\n       [2, 3, 4, 5, 6, 3],\n       [2, 3, 4, 4, 5, 4],\n       [3, 5, 4, 8, 9, 5]]), array([[9, 9, 8, 4, 5, 2],\n       [8, 4, 2, 8, 7, 3],\n       [3, 9, 5, 4, 5, 8],\n       [3, 2, 4, 6, 5, 4],\n       [2, 3, 4, 2, 5, 5]]), array([[9, 3, 4, 3, 4, 3],\n       [9, 3, 2, 3, 4, 4],\n       [2, 3, 4, 2, 4, 5],\n       [2, 3, 5, 2, 5, 3],\n       [2, 4, 5, 3, 9, 4]]), array([[2, 3, 4, 2, 5, 3],\n       [2, 5, 4, 5, 9, 5],\n       [2, 3, 9, 8, 4, 6],\n       [3, 5, 6, 8, 4, 5],\n       [2, 5, 8, 9, 5, 6]])]\n"
     },
     {
      "output_type": "execute_result",
@@ -82,7 +82,7 @@
       "text/plain": "([7.993605777301127e-15,\n  0.630694796730642,\n  1.3795662759280476,\n  1.6028467436632574,\n  1.4540137450235846],\n [])"
      },
      "metadata": {},
-     "execution_count": 78
+     "execution_count": 58
     }
    ],
    "source": [
@@ -91,7 +91,6 @@
     "\n",
     "    train_scores = []\n",
     "\n",
-    "    # \n",
     "    for i in range(1, train_size+1):\n",
     "        x = X[0:train_size*i][:]\n",
     "        y = Y[0:train_size*i]\n",
@@ -101,27 +100,16 @@
     "        train_scores = train_scores + [model.predict(x,y)]\n",
     "\n",
     "        #create model for data using k fold\n",
-    "        cv_data = np.array_split(x.tolist(), cv)\n",
-    "        cv_label = np.array_split(y.tolist(),cv)\n",
-    "\n",
-    "        for cv_x in cv_data:\n",
-    "            cv_data = np.array([])\n",
-    "            cv_label = np.array([])\n",
-    "            cv_data_test = np.array([])\n",
-    "            cv_label_test = np.array([])\n",
+    "        cv_data = np.array_split(np.column_stack((x,y)), cv)\n",
+    "        count = 0\n",
+    "        for part in cv_data:\n",
+    "            cv_x = pd.DataFrame()\n",
+    "            cv_y = pd.DataFrame()\n",
+    "            cv_x_test = pd.DataFrame()\n",
+    "            cv_y_test = pd.DataFrame()\n",
     "            for j in range(0, len(cv_data)):\n",
-    "                \n",
-    "\n",
-    "\n",
-    "            \n",
-    "            \n",
-    "        \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "        # print(p)\n",
+    "                if(count == j):\n",
+    "                    cv_x_test = part\n",
     "\n",
     "    return train_scores, []\n",
     "\n",
@@ -152,31 +140,8 @@
     "\n",
     "   \n",
     "# testing data\n",
-    "X = np.array([[2,3,4,2,4],\n",
-    "              [2,4,5,2,5],\n",
-    "              [3,2,3,5,8],\n",
-    "              [3,2,4,5,2],\n",
-    "              [2,5,5,1,8],\n",
-    "              [2,3,2,3,5],\n",
-    "              [3,4,2,5,6],\n",
-    "              [2,3,4,5,6],\n",
-    "              [2,3,4,4,5],\n",
-    "              [3,5,4,8,9],\n",
-    "              [9,9,8,4,5],\n",
-    "              [8,4,2,8,7],\n",
-    "              [3,9,5,4,5],\n",
-    "              [3,2,4,6,5],\n",
-    "              [2,3,4,2,5],\n",
-    "              [9,3,4,3,4],\n",
-    "              [9,3,2,3,4],\n",
-    "              [2,3,4,2,4],\n",
-    "              [2,3,5,2,5],\n",
-    "              [2,4,5,3,9],\n",
-    "              [2,3,4,2,5],\n",
-    "              [2,5,4,5,9],\n",
-    "              [2,3,9,8,4],\n",
-    "              [3,5,6,8,4],\n",
-    "              [2,5,8,9,5]])\n",
+    "X = np.array([[2,3,4,2,4],[2,4,5,2,5],[3,2,3,5,8],[3,2,4,5,2],[2,5,5,1,8],[2,3,2,3,5],[3,4,2,5,6],[2,3,4,5,6],[2,3,4,4,5],[3,5,4,8,9],[9,9,8,4,5],[8,4,2,8,7],\n",
+    "              [3,9,5,4,5],[3,2,4,6,5],[2,3,4,2,5],[9,3,4,3,4],[9,3,2,3,4],[2,3,4,2,4],[2,3,5,2,5],[2,4,5,3,9],[2,3,4,2,5],[2,5,4,5,9],[2,3,9,8,4],[3,5,6,8,4],[2,5,8,9,5]])\n",
     "\n",
     "Y = np.array([3,6,3,5,7,4,5,3,4,5,2,3,8,4,5,3,4,5,3,4,3,5,6,5,6]) # training labels\n",
     "\n",
