--- a/assignment-2/kim_changsu_reyes-cortes_jesse_steiner_devan_assignment2.ipynb
+++ b/assignment-2/kim_changsu_reyes-cortes_jesse_steiner_devan_assignment2.ipynb
@@ -26,21 +26,18 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "#Part A 1 Generate polynomial and interaction features for a given degree of the polynomial\n",
-    "def polynomialFeatures(X, degree):\n",
+    "def polynomialFeatures(X, degree):   \n",
     "    pa = []\n",
-    "    count = 0\n",
-    "    point = 0\n",
-    "    for i in range(1, degree+1):\n",
-    "        count = 0\n",
-    "        for j in range(count, len(X)):\n",
-    "            count = count + 1\n",
-    "    \n",
-    "    return X\n",
-    "    \n",
-    "X = [1, 3, 4]\n",
-    "degree = 5\n",
+    "    for i in range(1,degree+1):\n",
+    "        l = list(itertools.combinations_with_replacement(X, i))\n",
+    "        for j in l:\n",
+    "            pa = pa + [np.prod(np.array(list(j)))]\n",
+    "            \n",
+    "   \n",
     "\n",
-    "polynomialFeatures(X,degree)\n"
+    "    return pa;\n",
+    "degree = 3\n",
+    "polynomialFeatures([1, 4, 2, 10],degree)\n"
    ]
   },
   {
@@ -286,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
