added partA problem 5(a) and (b)

--- a/assignment-2/kim_changsu_reyes-cortes_jesse_steiner_devan_assignment2.ipynb
+++ b/assignment-2/kim_changsu_reyes-cortes_jesse_steiner_devan_assignment2.ipynb
@@ -261,10 +261,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-1-3775f9adbcea>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-3775f9adbcea>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fit(self, X, Y, learning_rate=0.01, epochs=1000, tol=None, regularizer=None,lambd=0.0,**kwargs):\n",
+    "        #provide parameters\n",
+    "        self.theta_hat = np.zeros(X.shape[1])# theta_hat should be the same column number with X\n",
+    "        self.X = X                           # Anumpy array with rows representing data samples and columns representing features\n",
+    "        self.Y = Y                           # A 1Dnumpy array with labels corresponding to each row of thefeaturematrix X.\n",
+    "        self.learning_rate = params['learning_rate']   # It provides the step size for parameter update\n",
+    "        self.epochs = params['epochs']                 # The maximum number of passes over the training data for updating the weight vector.\n",
+    "        self.tol = params['tol']                       # The stopping criterion. If it is not None, the iterations will stop when (error> previous_error-tol). If it is None, the number of iterations will be set by the “epochs”.\n",
+    "        self.regularizer = params['regularizer']       # The string value could be one of the following: l1, l2, None.If it’s set to None, the cost function without the regularization term will be used for computing the gradient and updating the weight vector. However, if it’s set to l1 or l2, the appropriate regularized cost function needs to be used for computing the gradient and updating the weight vector.\n",
+    "        self.lambd = params['lambd']                   # It provides the regularization coefficient.It is used only when the “regularizer” is set to l1 or l2.\n",
+    "\n",
+    "        # decide whether go with the epochs or the other\n",
+    "        previous_predition = None\n",
+    "        for i in range(self.epochs):\n",
+    "            #print(\"train \", i, \"times\")\n",
+    "            self.regularize()\n",
+    "            #print(self.theta_hat)\n",
+    "            predition = mse(self.predict(self.X), self.Y)\n",
+    "            if self.tol is not None:\n",
+    "                if previous_predition is not None:\n",
+    "                    # print(error - previous_error)\n",
+    "                    if error > previous_predition - self.tol:\n",
+    "                        break\n",
+    "            previous_predition = predition"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def predict(self, X):\n",
+    "    return np.asarray(np.matmul(X, self.theta.transpose()))"
+   ]
   }
  ],
  "metadata": {
