finished part A 5 although not tested

--- a/assignment-2/kim_changsu_reyes-cortes_jesse_steiner_devan_assignment2.ipynb
+++ b/assignment-2/kim_changsu_reyes-cortes_jesse_steiner_devan_assignment2.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 121,
    "metadata": {
     "tags": []
    },
@@ -288,8 +288,63 @@
     "# part A 5 Linear Regression Model \n",
     "class Linear_Regression:\n",
     "    def __init__(self):\n",
+    "        self.X = np.array([])\n",
+    "        self.Y = np.array([])\n",
+    "        self.learning_rate = 0.0\n",
+    "        self.epochs = 0\n",
+    "        self.tol = None\n",
+    "        self.regulizer = None\n",
+    "        self.lambd = None\n",
+    "        self.theta = []\n",
+    "        \n",
+    "    def fit(self, X, Y, learning_rate=0.01, epochs=1000, tol=None, regularizer=None,lambd=0.0, **kwargs):\n",
     "        self.X = X\n",
-    "        self.Y = Y\n"
+    "        self.Y = Y\n",
+    "        self.learning_rate = params['learning_rate']\n",
+    "        self.epochs = params['epochs']\n",
+    "        self.tol = params['tol']\n",
+    "        self.regulizer = params['regulizer']\n",
+    "        self.lambd = params['lambd']\n",
+    "        \n",
+    "        for i in range(0, self.epochs):\n",
+    "            self.theta = np.subtract(self.theta,((self.learning_rate/len(self.X))*(np.matnul(np.transpose(self.X),np.subtract(np.matnul(self.X,self.theta),self.Y)))))               \n",
+    "        \n",
+    "        \n",
+    "            \n",
+    "    def predict(self, X):\n",
+    "        y_hat = np.matmul(X, self.theta)\n",
+    "        return y_hat \n",
+    "    \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15784.833333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cost_function(x,y,theta):\n",
+    "        j = 0\n",
+    "        for i in range(0, len(x)):\n",
+    "            j = j + pow(y[i] - np.matmul(np.transpose(theta), x[i]),2)\n",
+    "        j = j/(2 * len(y))\n",
+    "        \n",
+    "        return j\n",
+    "    \n",
+    "x = [[3,2,3],[2,3,4],[3,3,4]]\n",
+    "y = [2,3,4]\n",
+    "theta = [20,20,20]\n",
+    "j = cost_function(x,y,theta)\n",
+    "print(j)"
    ]
   },
   {
