updating for part C

--- a/assignment-1/kim_changsu_reyes-cortes_jesse_steiner_devan_assignment1.ipynb
+++ b/assignment-1/kim_changsu_reyes-cortes_jesse_steiner_devan_assignment1.ipynb
@@ -33,9 +33,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Euclidean Distance:  1.0111874208078342\n"
+     "output_type": "stream",
+     "text": [
+      "Euclidean Distance:  1.0111874208078342\n"
+     ]
     }
    ],
    "source": [
@@ -1149,7 +1151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0-final"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
