--- a/assignment-2/kim_changsu_reyes-cortes_jesse_steiner_devan_assignment2.ipynb
+++ b/assignment-2/kim_changsu_reyes-cortes_jesse_steiner_devan_assignment2.ipynb
@@ -253,27 +253,6 @@
    "outputs": [],
    "source": [
     "# part A 5 Linear Regression Model \n",
-    "class Linear_Regression:\n",
-    "    def __init__(self):\n",
-    "        self.X = X\n",
-    "        self.Y = Y\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "'return' outside function (<ipython-input-1-3775f9adbcea>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-3775f9adbcea>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
-     ]
-    }
-   ],
-   "source": [
     "def fit(self, X, Y, learning_rate=0.01, epochs=1000, tol=None, regularizer=None,lambd=0.0,**kwargs):\n",
     "        #provide parameters\n",
     "        self.theta_hat = np.zeros(X.shape[1])# theta_hat should be the same column number with X\n",
@@ -297,7 +276,92 @@
     "                    # print(error - previous_error)\n",
     "                    if error > previous_predition - self.tol:\n",
     "                        break\n",
-    "            previous_predition = predition"
+    "            previous_predition = predition\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(self, X):\n",
+    "    return np.asarray(np.matmul(X, self.theta.transpose()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#PartC 10.\n",
+    "lambd = [1.0, 0, 0.1, 0.01, 0.001, 0.0001]\n",
+    "learning_rate = [0.1, 0.01, 0.001, 0.001]\n",
+    "regularizer = [11,12]\n",
+    "\n",
+    "#sfold function\n",
+    "# sfold - number of folds\n",
+    "# data - rows representing data samples and columns representing features\n",
+    "# labels - labels corresponding to each row of training_features\n",
+    "# model - object with the fit and predict methods\n",
+    "# model_args - dictionary of arguments to pass to the classification algorithm\n",
+    "# error_function - returns error value between predicted and true labels\n",
+    "\n",
+    "def sHelper(k, data):\n",
+    "    return np.array_split(data, k)      \n",
+    "\n",
+    "\n",
+    "def sFold(sfolds, data, labels, model, error_function, **model_args):\n",
+    "    expected_labels = []\n",
+    "    predicted_labels = []\n",
+    "    average_error = []\n",
+    "    probs = []\n",
+    "    \n",
+    "    \n",
+    "    parts = sHelper(sfolds, data)\n",
+    "    \n",
+    "    \n",
+    "    for part in parts:\n",
+    "        count = 0\n",
+    "        x =  pd.DataFrame()\n",
+    "        y = []\n",
+    "        x_test = pd.DataFrame()\n",
+    "        y_test = []\n",
+    "        for j in range(0,sfolds):\n",
+    "            if( count == j):\n",
+    "                x_test = x_test.append(part.drop(columns=['quality']))\n",
+    "                y_test = y_test + part['quality'].tolist()\n",
+    "                continue \n",
+    "            else:\n",
+    "                x = x.append(part.drop(columns=['quality']))\n",
+    "                y = y + part['quality'].tolist()\n",
+    "                             \n",
+    "        count = count + 1\n",
+    "        \n",
+    "        model.fit(x.to_numpy(),y, model_args[\"n_neighbors\"], model_args[\"distance\"])\n",
+    "        y_preds, prob = model.predict(x_test.to_numpy())\n",
+    "        \n",
+    "        \n",
+    "        expected_labels = expected_labels + y_test\n",
+    "        predicted_labels = predicted_labels + y_preds\n",
+    "        average_error = average_error + [error_function(y_test, y_preds)]\n",
+    "        probs = probs + prob\n",
+    "        \n",
+    "    print(\"sFold finished\")  \n",
+    "    return {\"Expected labels\" : expected_labels,\n",
+    "            \"Predicted labels\" : predicted_labels,\n",
+    "            \"Average error\" : np.array(average_error).mean(),\n",
+    "            \"probabilites: \": probs}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#plot_polynomial_model_complexity"
    ]
   },
   {
@@ -306,8 +370,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict(self, X):\n",
-    "    return np.asarray(np.matmul(X, self.theta.transpose()))"
+    "#Stochastic Gradient Descrent(Linear Regression algorithm)\n",
+    "#\n",
+    "##Load data\n",
+    "#boston = datasets.load_boston()\n",
+    "#print(boston.data.shape, boston.target.shape)\n",
+    "#print(boston.feature_names)\n",
+    "#\n",
+    "##Create A dataframe Object\n",
+    "#df = pd.DataFrame(boston.data, columns = boston.feature_names)\n",
+    "#df = pd.concate([df,pd.Series(boston.target, name = 'MEDV')], axis = 1)\n",
+    "#\n",
+    "##Quick Check of the Data\n",
+    "#df.head()\n",
+    "#\n",
+    "##Descripion of the Data\n",
+    "#df.info()\n",
+    "#\n",
+    "##Explore the Data: Describe Numberical Attributes\n",
+    "#df.describe()\n",
+    "#\n",
+    "##Looking for Numerical Correleations with the Target Column\n",
+    "#df.corr()['MEDV'].sort_values(ascending=False)\n",
+    "#\n",
+    "##Create a Separate Feature Set(Data Matrix X) and Target(1D vertor y)\n",
+    "#\n",
+    "#allData = df\n",
+    "#\n",
+    "##Use the following code to select ALL features\n",
+    "#X = df.drop(columns='MEDV') # Data Matrix containing all features excluding the target\n",
+    "#\n",
+    "#y = df['MEDV'] #1D target vector\n",
+    "#\n",
+    "#print(X.shape)\n",
+    "#print(y.shape)\n",
+    "#\n",
+    "##Create Train and Test Dataset\n",
+    "#X_train, X_train, y_train, Y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "#\n",
+    "##Scale The Features\n",
+    "#scaler = StandardScaler()\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#"
    ]
   }
  ],
