--- a/assignment-2/kim_changsu_reyes-cortes_jesse_steiner_devan_assignment2.ipynb
+++ b/assignment-2/kim_changsu_reyes-cortes_jesse_steiner_devan_assignment2.ipynb
@@ -306,6 +306,7 @@
     "        self.regulizer = params['regulizer']\n",
     "        self.lambd = params['lambd']\n",
     "        \n",
+    "        \n",
     "        for i in range(0, self.epochs):\n",
     "            self.theta = np.subtract(self.theta,((self.learning_rate/len(self.X))*(np.matnul(np.transpose(self.X),np.subtract(np.matnul(self.X,self.theta),self.Y)))))               \n",
     "        \n",
@@ -621,12 +622,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "kFold\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# part C 10 model selection via hyperparamete tuning\n",
+    "def kFold(model, X, Y,lambd, learning_rate, regularizer):\n",
+    "    dict = []\n",
+    "    for lm in lambd:\n",
+    "        for lr in learning_rate:\n",
+    "            for rg in regularizer:\n",
+    "                print(\"kFold\")\n",
+    "    \n",
+    "    return dict\n",
+    "    \n",
+    "    \n",
+    "lambd = [1.0, 0, 0.1, 0.01, 0.001, 0.0001]\n",
+    "learning_rate = [0.1, 0.01, 0.001, 0.001]\n",
+    "regularizer = [11, 12]\n",
+    "\n",
+    "model = Linear_Regression()\n",
+    "\n",
+    "dic = kFold(model, X, Y,lambd, learning_rate, regularizer)\n",
+    "print(dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# part C model evaluation"
-   ]
+   "source": []
   }
  ],
  "metadata": {
