Copy-pasted Changsu's part B

--- a/assignment-3/kim_changsu_reyes-cortes_jesse_assignment3.ipynb
+++ b/assignment-3/kim_changsu_reyes-cortes_jesse_assignment3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +13,144 @@
     "\n",
     "#################             NAIVE BAYES CLASSIFIER             #################\n",
     "\n",
-    "# part A: model code (design multinomial naive bayes)\n"
+    "# part A: model code (design multinomial naive bayes)\n",
+    "import numpy as np\n",
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      spam                                               text\n",
+      "0      ham                      Ok lar... Joking wif u oni...\n",
+      "1     spam  Free entry in 2 a wkly comp to win FA Cup fina...\n",
+      "2      ham  U dun say so early hor... U c already then say...\n",
+      "3      ham  Nah I don't think he goes to usf, he lives aro...\n",
+      "4     spam  FreeMsg Hey there darling it's been 3 week's n...\n",
+      "...    ...                                                ...\n",
+      "5566  spam  This is the 2nd time we have tried 2 contact u...\n",
+      "5567   ham               Will ü b going to esplanade fr home?\n",
+      "5568   ham  Pity, * was in mood for that. So...any other s...\n",
+      "5569   ham  The guy did some bitching but I acted like i'd...\n",
+      "5570   ham                         Rofl. Its true to its name\n",
+      "\n",
+      "[5571 rows x 2 columns]\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5571 entries, 0 to 5570\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   spam    5571 non-null   int32 \n",
+      " 1   text    5571 non-null   object\n",
+      "dtypes: int32(1), object(1)\n",
+      "memory usage: 65.4+ KB\n",
+      "Dimension of the data:  (5571, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "# part B: exploratory data analysis\n",
-    "# B.2 read in SMSSpamCollection.csv as DataFrame\n"
+    "# B.2 read in SMSSpamCollection.csv as DataFrame\n",
+    "df = pd.read_csv('SMSSpamCollection_copy', delimiter='\\t');\n",
+    "df.columns = ['spam', 'text'] \n",
+    "print(df)\n",
+    "#print(len(df.columns))\n",
+    "#dropping null value columns to avoid errorsk\n",
+    "#df.dropna(inplace = True)\n",
+    "#split value columns\n",
+    "#df['text'] = df['text'].str.split(\"t\", n = 1, expand = True)\n",
+    "#print(df[0])\n",
+    "#print(df[1])\n",
+    "#print(df)\n",
+    "#df = df.reindex(columns=['text','label'])\n",
+    "#print(df.shape[1])\n",
+    "df['spam'] = np.where(df['spam'] == \"spam\", 1, 0) #broadcasting\n",
+    "df.head()\n",
+    "df.info()\n",
+    "print(\"Dimension of the data: \", df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "No. of Rows: 5571\n",
+      "No. of Columns: 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>spam</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>747</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      text\n",
+       "spam      \n",
+       "0     4824\n",
+       "1      747"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# B.3 summerization of data in terms of mean, standard deviation, and quartiles\n",
+    "no_of_rows = df.shape[0]\n",
+    "no_of_columns = df.shape[1]\n",
+    "\n",
+    "print(\"\\nNo. of Rows: %d\" % no_of_rows)\n",
+    "print(\"No. of Columns: %d\" % no_of_columns)\n",
+    "df.groupby('spam').count()"
    ]
   },
   {
@@ -32,16 +159,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# B.3 summerization of data in terms of mean, standard deviation, and quartiles\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# B.4 generate plot to display class distribution\n"
+    "# B.4 generate plot to display class distribution\n",
+    "label_counts = df.spam.value_counts()\n",
+    "plt.figure(figsize = (12,6))\n",
+    "sns.barplot(label_counts.index, label_counts.values, alpha = 0.9)\n",
+    "\n",
+    "plt.xticks(rotation = 'vertical')\n",
+    "plt.xlabel('spam', fontsize =12)\n",
+    "plt.ylabel('Counts', fontsize = 12)\n",
+    "plt.show()\n",
+    "#Create a new column \"length\" the stores the length of the text on each row\n",
+    "df['length'] = df['text'].map(lambda text: len(text))\n",
+    "\n",
+    "df.groupby('spam').length.describe()\n",
+    "emails_subset = df[df.length < 1800]\n",
+    "emails_subset.hist(column='length', by='spam', bins=50)"
    ]
   },
   {
@@ -282,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
